# G

./: .gitignore  CLAUDE.md  LICENSE  README.md  actions.py  ai_providers.py  alarms.py  app_finder.py  assistant.py  brain.py  brain_defs.py  calendar_local.py  cognitive.py  cognitive_budget.py  computer.py  config.py  desktop_agent.py  email_sender.py  embeddings.py  execution_strategies.py  intent.py  main.py  memory.py  news.py  reminders.py  requirements.txt  run.py  self_test.py  skills.py  speech.py  test_1000.py  test_batch_fresh.py  test_full.py  test_harness.py  test_live.py  test_real.py  test_stress.py  training_data.jsonl  user_choice.py  vision.py  (+2 more)
agent/: __init__.py  desktop_agent.py
agents/: __init__.py  base.py  blackboard.py  critic.py  debate.py  executor.py  memory_agent.py  orchestrator.py  planner.py  popup_guardian.py  researcher.py
audio/: __init__.py  rust_audio.py
automation/: __init__.py  browser_driver.py  cdp_session.py  event_waiter.py  observer.py  orchestrator.py  playwright_session.py  resolve.py  ui_control.py  verifier.py  window_manager.py  world_state.py
camera/: __init__.py  camera_manager.py  camera_tools.py  continuous_monitor.py  vision_analyzer.py
core/: __init__.py  awareness_state.py  awareness_updater.py  context_injector.py  control_flags.py  event_bus.py  execution_tiers.py  failure_journal.py  metrics.py  observability.py  paths.py  proactive_engine.py  session_persistence.py  state.py  timeouts.py  tool_contracts.py  (+1 more)
crates/audio-capture/: Cargo.toml
crates/audio-capture/src/: buffer.rs  main.rs  vad.rs
(+150 files in other folders)
